fix for broken ui

--- a/client/Components/Dog/dog.scss
+++ b/client/Components/Dog/dog.scss
@@ -2,8 +2,7 @@
 
 #dog-container {
     display: flex;
-    background-color: rgba(253, 253, 150, 0.2);
-    padding-top: 2vw;
+    padding-top: 10vh;
     margin: 0 auto;
     height: 100%;
     width: 70%;
@@ -16,17 +15,18 @@
     flex-basis: 50%;
 }
 
-.polaroid {
-    width: 360px;
+#dog-image {
+    width: 340px;
+    height: 470px;
 }
 
-.polaroid img {
+#dog-image img {
     object-fit: cover;
     width: 300px;
     height: 350px;
 }
 
-.polaroid p {
+#dog-image p {
     word-wrap: break-word;
 }
 
