--- a/client/Components/Dogs/dogs.scss
+++ b/client/Components/Dogs/dogs.scss
@@ -20,7 +20,7 @@
   justify-content: space-around;
   margin: 2%;
   padding: 1%;
-  width: 25%;
+  width: 28%;
 }
 
 .dogcontent {
@@ -48,5 +48,5 @@
 }
 
 button.btn-add-crate {
-  --btn-crate-font-size: 1.5em;
+  --btn-crate-font-size: 1.2em;
 }
